Redirecting pages to Landing.html, clinicalBIO namechange, clinicalBIO page

--- a/about.html
+++ b/about.html
@@ -14,12 +14,12 @@
     <!-- CSS -->
     <link rel="stylesheet" href="style.css">
         
-    <title>Ale Laurora - UX Designer</title>
+    <title>Ale Laurora - Product Designer</title>
 </head>
 
 <body>
     <nav  class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand mr-auto" href="index.html">
+        <a class="navbar-brand mr-auto" href="landing.html">
             <img class="logo" src="assets/AL-Logo/Logo 5.png" alt="Alejandro Laurora Logo">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,7 +28,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Portfolio</a>
+                    <a class="nav-link" href="landing.html">Portfolio</a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="#">Say Hi <span class="sr-only">(current)</span></a>
@@ -45,7 +45,7 @@
             <a href="https://www.instagram.com/alelaurora/"><i class="fab fa-instagram"></i></a>
         </div>
         <div class="p-5 text-white">
-            <h5>I'm a UX Designer based in Rosario, Argentina.</h5>
+            <h5>I'm a Product Designer based in Rosario, Argentina.</h5>
             <p>I've been transforming ideas into products for more than 8 years, with strong passion for digital experiences, interactions and engagement between people and products.</p>
         </div>
 
