--- a/landing.html
+++ b/landing.html
@@ -18,7 +18,7 @@
 
 <body>
   <nav  class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand mr-auto" href="index.html">
+    <a class="navbar-brand mr-auto" href="landing.html">
       <img class="logo" src="assets/AL-Logo/Logo 5.png" alt="Alejandro Laurora Logo">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -62,7 +62,7 @@
         <a href="#">Patient Online Services</a>
       </div>
       <div class="thumb">
-        <a href="#">clinicalBIO</a>
+        <a href="clinicalbio.html">clinicalBIO</a>
       </div>
       <div class="thumb">
         <a href="btg.html">BTG Pactual</a>
