Rest of the pages added

--- a/landing.html
+++ b/landing.html
@@ -56,22 +56,22 @@
     
     <div class="gallery">
       <div class="thumb">
-        <a href="#">Litoral Gas</a>
+        <a href="litoral-gas.html">Litoral Gas</a>
       </div>
       <div class="thumb">
-        <a href="#">Patient Online Services</a>
+        <a href="pos.html">Patient Online Services</a>
       </div>
       <div class="thumb">
         <a href="clinicalbio.html">clinicalBIO</a>
       </div>
       <div class="thumb">
-        <a href="btg.html">BTG Pactual</a>
+        <a href="btg-pactual.html">BTG Pactual</a>
       </div>
       <div class="thumb">
-        <a href="#">Santander</a>
+        <a href="santander.html">Santander</a>
       </div>
       <div class="thumb">
-        <a href="#">Delta Airlines</a>
+        <a href="delta-airlines.html">Delta Airlines</a>
       </div>
     </div>
     
