Litoral Gas site

--- a/litoral-gas.html
+++ b/litoral-gas.html
@@ -14,7 +14,7 @@
     <title>Ale Laurora - Litoral Gas</title>
 </head>
 
-<body class="btg">
+<body class="">
     <nav  class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand mr-auto" href="landing.html">
             <img class="logo" src="assets/AL-Logo/Logo 5.png" alt="Alejandro Laurora Logo">
@@ -35,34 +35,46 @@
     </nav>
     
     <main class="container-fluid text-center">
-        <h2>New Landing Page</h2>
+        <h2>New Site</h2>
         <p class="small">Litoral Gas</p>
 
         <div class="row">
             <div class="col-xs-12 col-sm-8 col-md-6 mx-auto">
-                <p>BTG Pactual Client Dashboard shows a summary of your account, investments, a virtual wallet and keeps track of your movements. I've worked to adapt the experience from desktop to tablets and give design consultancy for opportunities and constraints on site's Visual Design. On Jan 2016, joined FJORD São Paulo to launch the new digital transformation.</p>
-                <img src="assets/img/btg/btg-mockups.png" class="img-fluid pt-4" alt="BTG Notebook and Display Mockup">
+                <p>Litoral Gas S.A. has the concession of gas distribution in Santa Fe and northeast of Buenos Aires provinces. Since 2015 was merged with an energy giant, the starting point of this project was to match both brands identities with the current. It should be dynamic, simple, but keeping the components and functionality of their current page.</p>
             </div>
         </div>
         <div class="row">
             <div class="col-xs-12 col-sm-8 mt-4 mx-auto">
-                <img src="assets/img/btg/btg-summary-lg.png" class="img-fluid pb-4" alt="BTG Summary - Entire page">
-                <p>For this project, I’ve worked on several parts, some wireframes, gird, navigation, icons, and a lot of responsive breakpoints, solving problems that came up with the small amount of space, and large amount of data, on different devices.</p>
-                
+                <img src="assets/img/lg/lg-1.png" class="img-fluid pt-4 pb-4" alt="Litoral Gas - Mobile Site">                
             </div>
         </div>
         <div class="row">
-            <img src="assets/img/btg/btg-mockup-pic.png" class="img-fluid col-12 h-100" alt="Guy using BTG Pactual on an iPad">
+            <img src="assets/img/lg/lg-divider.png" class="img-fluid col-12 h-100 pb-4" alt="Litoral Gas - Color Flux">                
         </div>
         <div class="row">
-            <div class="col-xs-12 col-sm-6 mx-auto">
-                <img src="assets/img/btg/btg-summary.png" class="img-fluid pb-4" alt="BTG Pactual - Summary">
+            <div class="col-xs-12 col-sm-8 mt-4 mx-auto">
+                <img src="assets/img/lg/lg-landing.png" class="img-fluid col-12 h-100" alt="Litoral Gas - Landing Page">
             </div>
-            <div class="col-xs-12 col-sm-6 mx-auto">
-                <img src="assets/img/btg/btg-transactions.png" class="img-fluid pb-4" alt="BTG Pactual - Transactions">
+        </div>
+        <div class="row">
+            <div class="col-xs-12 col-sm-8 mt-4 mx-auto">
+                <img src="assets/img/lg/lg-nav.png" class="img-fluid col-12 h-100" alt="Litoral Gas - Navigation">
             </div>
-            <div class="col-12 mx-auto">
-                <img src="assets/img/btg/btg-icons.png" class="img-fluid mt-5 mb-5 pt-5 pb-5" alt="BTG Pactual - Interface Icons">
+        </div>
+        <div class="row">
+            <div class="col-xs-12 col-sm-8 mt-4 mx-auto">
+                <img src="assets/img/lg/lg-article.png" class="img-fluid col-12 h-100" alt="Litoral Gas - Article Page">
+            </div>
+        </div>
+        <div class="row">
+            <img src="assets/img/lg/lg-divider.png" class="img-fluid col-12 h-100 pb-4" alt="Litoral Gas - Color Flux">                
+        </div>
+        <div class="row mb-4">
+            <div class="col-xs-12 col-sm-4 ml-auto">
+                <img src="assets/img/lg/lg-mobile-overlay.png" class="img-fluid pb-4" alt="Litoral Gas - Mobile Menu">
+            </div>
+            <div class="col-xs-12 col-sm-4 mr-auto">
+                <img src="assets/img/lg/lg-mobile.png" class="img-fluid pb-4" alt="Litoral Gas - Mobile Menu Open">
             </div>
         </div>
     </main>
