Updates on Santander & Delta

--- a/delta-airlines.html
+++ b/delta-airlines.html
@@ -14,7 +14,7 @@
     <title>Ale Laurora - Delta Airlines</title>
 </head>
 
-<body class="btg">
+<body class="">
     <nav  class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand mr-auto" href="landing.html">
             <img class="logo" src="assets/AL-Logo/Logo 5.png" alt="Alejandro Laurora Logo">
@@ -40,29 +40,17 @@
 
         <div class="row">
             <div class="col-xs-12 col-sm-8 col-md-6 mx-auto">
-                <p>BTG Pactual Client Dashboard shows a summary of your account, investments, a virtual wallet and keeps track of your movements. I've worked to adapt the experience from desktop to tablets and give design consultancy for opportunities and constraints on site's Visual Design. On Jan 2016, joined FJORD São Paulo to launch the new digital transformation.</p>
-                <img src="assets/img/btg/btg-mockups.png" class="img-fluid pt-4" alt="BTG Notebook and Display Mockup">
+                <p>Keep Climbing was a single-page marketing page in order to show Delta Airlines flying experience. A small and nice project, in which I worked on the design and then I code it.</p>
             </div>
         </div>
         <div class="row">
-            <div class="col-xs-12 col-sm-8 mt-4 mx-auto">
-                <img src="assets/img/btg/btg-summary-lg.png" class="img-fluid pb-4" alt="BTG Summary - Entire page">
-                <p>For this project, I’ve worked on several parts, some wireframes, gird, navigation, icons, and a lot of responsive breakpoints, solving problems that came up with the small amount of space, and large amount of data, on different devices.</p>
-                
+            <div class="col-xs-12 col-sm-6 mt-4 mx-auto">
+                <img src="assets/img/delta/delta.jpg" class="img-fluid pb-4" alt="Keep Climbing Landing PAge">
             </div>
         </div>
         <div class="row">
-            <img src="assets/img/btg/btg-mockup-pic.png" class="img-fluid col-12 h-100" alt="Guy using BTG Pactual on an iPad">
-        </div>
-        <div class="row">
-            <div class="col-xs-12 col-sm-6 mx-auto">
-                <img src="assets/img/btg/btg-summary.png" class="img-fluid pb-4" alt="BTG Pactual - Summary">
-            </div>
-            <div class="col-xs-12 col-sm-6 mx-auto">
-                <img src="assets/img/btg/btg-transactions.png" class="img-fluid pb-4" alt="BTG Pactual - Transactions">
-            </div>
-            <div class="col-12 mx-auto">
-                <img src="assets/img/btg/btg-icons.png" class="img-fluid mt-5 mb-5 pt-5 pb-5" alt="BTG Pactual - Interface Icons">
+            <div class="col-xs-12 col-sm-8 col-md-6 mb-4 mx-auto">
+                <p>Pssst! Don't tell anyone, but apparently is still online: <a href="https://www.delta.com/content/www/en_US/traveling-with-us/planning-a-trip/keep-climbing.html">https://www.delta.com/content/www/en_US/traveling-with-us/planning-a-trip/keep-climbing.html</a> looks broken, but it's online.</p>
             </div>
         </div>
     </main>
