--- a/santander.html
+++ b/santander.html
@@ -14,7 +14,7 @@
     <title>Ale Laurora - Santander</title>
 </head>
 
-<body class="btg">
+<body class="">
     <nav  class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand mr-auto" href="landing.html">
             <img class="logo" src="assets/AL-Logo/Logo 5.png" alt="Alejandro Laurora Logo">
@@ -45,23 +45,12 @@
         </div>
         <div class="row">
             <div class="col-xs-12 col-sm-8 mt-4 mx-auto">
-                <img src="assets/img/btg/btg-summary-lg.png" class="img-fluid pb-4" alt="BTG Summary - Entire page">
-                <p>For this project, I’ve worked on several parts, some wireframes, gird, navigation, icons, and a lot of responsive breakpoints, solving problems that came up with the small amount of space, and large amount of data, on different devices.</p>
-                
+                <img src="assets/img/santander/encolador-wire.jpg" class="img-fluid col-12 h-100" alt="Santander Wireframe">
             </div>
         </div>
         <div class="row">
-            <img src="assets/img/btg/btg-mockup-pic.png" class="img-fluid col-12 h-100" alt="Guy using BTG Pactual on an iPad">
-        </div>
-        <div class="row">
-            <div class="col-xs-12 col-sm-6 mx-auto">
-                <img src="assets/img/btg/btg-summary.png" class="img-fluid pb-4" alt="BTG Pactual - Summary">
-            </div>
-            <div class="col-xs-12 col-sm-6 mx-auto">
-                <img src="assets/img/btg/btg-transactions.png" class="img-fluid pb-4" alt="BTG Pactual - Transactions">
-            </div>
-            <div class="col-12 mx-auto">
-                <img src="assets/img/btg/btg-icons.png" class="img-fluid mt-5 mb-5 pt-5 pb-5" alt="BTG Pactual - Interface Icons">
+            <div class="col-xs-12 col-sm-8 mt-4 mb-4 mx-auto">
+                <img src="assets/img/santander/encolador-proto.png" class="img-fluid col-12 h-100" alt="Santander Prototype">
             </div>
         </div>
     </main>
