POS page, bufixes

--- a/landing.html
+++ b/landing.html
@@ -51,7 +51,7 @@
       <p class="display-1 p-5">Keepin' things simple and easy to use.</p>
       <!-- <p class="display-3">Simple and usable.</p> -->
       <!-- <p class="display-3">Make it a pleasure.</p> -->
-      <!-- <p class="display-3">Simple things that make you smile.</p> -->
+      <!-- <p class="display-3">Going simple to make you smile.</p> -->
     </header>
     
     <div class="gallery">
