--- a/litoral-gas.html
+++ b/litoral-gas.html
@@ -49,7 +49,7 @@
             </div>
         </div>
         <div class="row">
-            <img src="assets/img/lg/lg-divider.png" class="img-fluid col-12 h-100 pb-4" alt="Litoral Gas - Color Flux">                
+            <img src="assets/img/lg/lg-divider.png" class="img-fluid col-12 h-100 pb-2" alt="Litoral Gas - Color Flux">                
         </div>
         <div class="row">
             <div class="col-xs-12 col-sm-8 mt-4 mx-auto">
@@ -63,15 +63,15 @@
         </div>
         <div class="row">
             <div class="col-xs-12 col-sm-8 mt-4 mx-auto">
-                <img src="assets/img/lg/lg-article.png" class="img-fluid col-12 h-100" alt="Litoral Gas - Article Page">
+                <img src="assets/img/lg/lg-article.png" class="img-fluid col-12 h-100 pb-4" alt="Litoral Gas - Article Page">
             </div>
         </div>
         <div class="row">
-            <img src="assets/img/lg/lg-divider.png" class="img-fluid col-12 h-100 pb-4" alt="Litoral Gas - Color Flux">                
+            <img src="assets/img/lg/lg-divider.png" class="img-fluid col-12 h-100 pt-2 pb-4" alt="Litoral Gas - Color Flux">                
         </div>
         <div class="row mb-4">
             <div class="col-xs-12 col-sm-4 ml-auto">
-                <img src="assets/img/lg/lg-mobile-overlay.png" class="img-fluid pb-4" alt="Litoral Gas - Mobile Menu">
+                <img src="assets/img/lg/lg-mobile-overlay.png" class="img-fluid pt-2 pb-4" alt="Litoral Gas - Mobile Menu">
             </div>
             <div class="col-xs-12 col-sm-4 mr-auto">
                 <img src="assets/img/lg/lg-mobile.png" class="img-fluid pb-4" alt="Litoral Gas - Mobile Menu Open">
