--- a/pos.html
+++ b/pos.html
@@ -14,8 +14,8 @@
     <title>Ale Laurora - Patient Online Services</title>
 </head>
 
-<body class="btg">
-    <nav  class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+<body class="pos">
+    <nav  class="navbar sticky-top navbar-expand-lg">
         <a class="navbar-brand mr-auto" href="landing.html">
             <img class="logo" src="assets/AL-Logo/Logo 5.png" alt="Alejandro Laurora Logo">
         </a>
@@ -40,29 +40,61 @@
 
         <div class="row">
             <div class="col-xs-12 col-sm-8 col-md-6 mx-auto">
-                <p>BTG Pactual Client Dashboard shows a summary of your account, investments, a virtual wallet and keeps track of your movements. I've worked to adapt the experience from desktop to tablets and give design consultancy for opportunities and constraints on site's Visual Design. On Jan 2016, joined FJORD São Paulo to launch the new digital transformation.</p>
-                <img src="assets/img/btg/btg-mockups.png" class="img-fluid pt-4" alt="BTG Notebook and Display Mockup">
+                <p>Patient Online Services let you see your medical records and results, manage appointments, review your clinincal notes, use Mayo Clinic Express Care Online and more.</p>
+                <p>I was involved from the early stages of the project, working from early wireframes, prototypes, illustrations, mailings, even error messages and documentation.</p>
+                <img src="assets/img/pos/pos-mock-1.jpg"    class="img-fluid pt-4" alt="Patient Online Services - Notebook Mockup">
+                <img src="assets/img/pos/pos-color.png"     class="img-fluid pt-4" alt="Patient Online Services - Color strip">
+                <img src="assets/img/pos/pos-2.png"         class="img-fluid pt-4" alt="Patient Online Services - Welcome card">
             </div>
         </div>
         <div class="row">
-            <div class="col-xs-12 col-sm-8 mt-4 mx-auto">
-                <img src="assets/img/btg/btg-summary-lg.png" class="img-fluid pb-4" alt="BTG Summary - Entire page">
-                <p>For this project, I’ve worked on several parts, some wireframes, gird, navigation, icons, and a lot of responsive breakpoints, solving problems that came up with the small amount of space, and large amount of data, on different devices.</p>
-                
+            <div class="col-xs-12 col-sm-8 col-md-6 mx-auto pt-4 pb-4">
+                <p>From the early stages of the project, we started to work on wireframing stage. This way we mold the layout and functionality based on requirements and user journeys.</p>
             </div>
-        </div>
-        <div class="row">
-            <img src="assets/img/btg/btg-mockup-pic.png" class="img-fluid col-12 h-100" alt="Guy using BTG Pactual on an iPad">
         </div>
         <div class="row">
             <div class="col-xs-12 col-sm-6 mx-auto">
-                <img src="assets/img/btg/btg-summary.png" class="img-fluid pb-4" alt="BTG Pactual - Summary">
+                <img src="assets/img/pos/pos-wireframes-1.png" class="img-fluid pb-4" alt="Patient Online Services - Wireframe Landing">
             </div>
             <div class="col-xs-12 col-sm-6 mx-auto">
-                <img src="assets/img/btg/btg-transactions.png" class="img-fluid pb-4" alt="BTG Pactual - Transactions">
+                <img src="assets/img/pos/pos-wireframes-2.png" class="img-fluid pb-4" alt="Patient Online Services - Wireframe Edit Widget">
             </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12 col-sm-8 col-md-6 mx-auto">
+                <img src="assets/img/pos/pos-icons.png" class="img-fluid pt-4 pb-4" alt="Patient Online Services - Custom icon theme">
+
+                <img src="assets/img/pos/pos-feature-1.png" class="img-fluid pt-4" alt="Patient Online Services - Feature card ">
+                <img src="assets/img/pos/pos-feature-2.png" class="img-fluid" alt="Patient Online Services - Feature card ">
+                <img src="assets/img/pos/pos-feature-3.png" class="img-fluid" alt="Patient Online Services - Feature card ">
+                <img src="assets/img/pos/pos-feature-4.png" class="img-fluid pb-4" alt="Patient Online Services - Feature card ">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12 col-sm-8 col-md-6 mx-auto pt-4 pb-4">
+                <p>In accordance with health literacy best practices, each color, contrast or border was tested to guarantee accessibility and fonts used are simple and familiar to enhance readability.</p>
+                <p>Regardless user's age or condition, they will have the clearest and easiest experience possible. </p>
+            </div>
+        </div>
+        <div class="row">
             <div class="col-12 mx-auto">
-                <img src="assets/img/btg/btg-icons.png" class="img-fluid mt-5 mb-5 pt-5 pb-5" alt="BTG Pactual - Interface Icons">
+                <img src="assets/img/pos/pos-landing-1.png" class="img-fluid mt-5 mb-5 pt-5 pb-5 card-shadow" alt="Patient Online Services - Landing page">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12 col-sm-8 col-md-6 mx-auto">
+                <img src="assets/img/pos/pos-type.png" class="img-fluid pt-4" alt="Patient Online Services - Typography Specimen (Helvetica Neue and Arial)">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12 col-sm-8 col-md-6 mx-auto">
+                <img src="assets/img/pos/pos-card-1.png" class="img-fluid pb-4" alt="Patient Online Services - Card Fitness Tracker">
+                <img src="assets/img/pos/pos-card-2.png" class="img-fluid pb-4" alt="Patient Online Services - Card Medication">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12 col-sm-8 col-md-6 mx-auto">
+                <img src="assets/img/pos/pos-icon-care_plan.png" class="img-fluid pb-4" alt="Patient Online Services - Care Plan icon">
             </div>
         </div>
     </main>
