Changing "landing" to "index"

--- a/404.html
+++ b/404.html
@@ -19,7 +19,7 @@
 
 <body>
     <nav  class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand mr-auto" href="landing.html">
+        <a class="navbar-brand mr-auto" href="index.html">
             <img class="logo" src="assets/AL-Logo/Logo 5.png" alt="Alejandro Laurora Logo">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,7 +28,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="landing.html">Portfolio</a>
+                    <a class="nav-link" href="index.html">Portfolio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="about.html">Say Hi</a>
@@ -47,7 +47,7 @@
         <div class="p-5 text-white">
             <h2>¯\_(ツ)_/¯</h2>
             <h5>We couldn't find what you were looking for.</h5>
-            <p>Please try again or <a href="landing.html">comeback to the homepage</a>.</p>
+            <p>Please try again or <a href="index.html">comeback to the homepage</a>.</p>
         </div>
     </main>
 </body>
