--- a/btg-pactual.html
+++ b/btg-pactual.html
@@ -16,7 +16,7 @@
 
 <body class="btg">
     <nav  class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand mr-auto" href="landing.html">
+        <a class="navbar-brand mr-auto" href="index.html">
             <img class="logo" src="assets/AL-Logo/Logo 5.png" alt="Alejandro Laurora Logo">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
