--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 
 <body>
     <nav  class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand mr-auto" href="landing.html">
+        <a class="navbar-brand mr-auto" href="index.html">
             <img class="logo" src="assets/AL-Logo/Logo 5.png" alt="Alejandro Laurora Logo">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,7 +28,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="landing.html">Portfolio</a>
+                    <a class="nav-link" href="index.html">Portfolio</a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="#">Say Hi <span class="sr-only">(current)</span></a>
