--- a/delta-airlines.html
+++ b/delta-airlines.html
@@ -14,10 +14,13 @@
     <title>Ale Laurora - Delta Airlines</title>
 </head>
 
-<body class="">
+<body class="delta">
     <nav  class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand mr-auto" href="index.html">
             <img class="logo" src="assets/AL-Logo/Logo 5.png" alt="Alejandro Laurora Logo">
+            <!-- <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 31.494 31.494" style="enable-background:new 0 0 31.494 31.494;" xml:space="preserve">
+                <path style="fill: #ffffff;" d="M10.273,5.009c0.444-0.444,1.143-0.444,1.587,0c0.429,0.429,0.429,1.143,0,1.571l-8.047,8.047h26.554c0.619,0,1.127,0.492,1.127,1.111c0,0.619-0.508,1.127-1.127,1.127H3.813l8.047,8.032c0.429,0.444,0.429,1.159,0,1.587c-0.444,0.444-1.143,0.444-1.587,0l-9.952-9.952c-0.429-0.429-0.429-1.143,0-1.571L10.273,5.009z"/>
+            </svg> -->
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -37,7 +40,7 @@
     <main class="container-fluid text-center">
         <h2>Keep Climbing</h2>
         <p class="small">Delta Airlines</p>
-
+        
         <div class="row">
             <div class="col-xs-12 col-sm-8 col-md-6 mx-auto">
                 <p>Keep Climbing was a single-page marketing page in order to show Delta Airlines flying experience. A small and nice project, in which I worked on the design and then I code it.</p>
