--- a/clinicalbio.html
+++ b/clinicalbio.html
@@ -17,10 +17,7 @@
 <body class="bio">
     <nav  class="navbar sticky-top navbar-expand-lg navbar-light">
         <a class="navbar-brand mr-auto" href="index.html">
-            <img class="logo" src="assets/AL-Logo/Logo 5.png" alt="Alejandro Laurora Logo">
-            <!-- <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 31.494 31.494" style="enable-background:new 0 0 31.494 31.494;" xml:space="preserve">
-                <path style="fill: #170727;" d="M10.273,5.009c0.444-0.444,1.143-0.444,1.587,0c0.429,0.429,0.429,1.143,0,1.571l-8.047,8.047h26.554c0.619,0,1.127,0.492,1.127,1.111c0,0.619-0.508,1.127-1.127,1.127H3.813l8.047,8.032c0.429,0.444,0.429,1.159,0,1.587c-0.444,0.444-1.143,0.444-1.587,0l-9.952-9.952c-0.429-0.429-0.429-1.143,0-1.571L10.273,5.009z"/>
-            </svg> -->
+            <svg xmlns="http://www.w3.org/2000/svg" width="221" height="199.3" viewBox="0 0 221 199.3" class="logo" alt="Alejandro Laurora Logo"><defs><style>.a{fill:#fe5c2b;}</style></defs><path class="a" d="M788.079,438.852,707.393,299.1a29.5,29.5,0,0,0-45.03-7.4,30.454,30.454,0,0,0-6.561,7.9L575.116,439.359a29.5,29.5,0,0,0,25.548,44.25h88a29.5,29.5,0,0,0,0-59H684.4c-1.372,0-2.372-.072-2.737-.072a17.561,17.561,0,0,1-17.379-17.331,17.226,17.226,0,0,1,17.069-17.07c11.31,0,17,11.309,17.812,12.714L737.3,468.9a29.489,29.489,0,0,0,40.851,10.47C791.958,471,796.153,452.837,788.079,438.852Z" transform="translate(-571.164 -284.35)"/></svg>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
