Pre-Production Version
Pre-Production Version

--- a/index.html
+++ b/index.html
@@ -17,53 +17,69 @@
 </head>
 
 <body>
-  <nav  class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand mr-auto" href="index.html">
-      <img class="logo" src="assets/AL-Logo/Logo 5.png" alt="Alejandro Laurora Logo">
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Portfolio <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="about.html">Say Hi</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+  <div class="container">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand mr-auto" href="index.html">
+        <!-- <img class="logo" src="assets/AL-Logo/Logo 5.png" alt="Alejandro Laurora Logo"> -->AL
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link lightson" href="#gallery">Portfolio <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link lightson" href="about.html">Say Hi</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </div>
   
-  <main class="container-fluid">
+  
+  <main class="container">
     <header class="lead">
-      <p class="display-1 p-5">Keepin' things simple and easy to use.</p>
+      <!-- <p class="display-1 p-5">Keepin' things simple and easy to use.</p> -->
+      <!-- <p class="display-1 p-5">Making your life easier.</p>
+      <p class="display-1 p-5">Making your digital life easier.</p>
+      <p class="display-1 p-5">Making your digital life enjoyable.</p>
+      <p class="display-1 p-5">Making stuff you can enjoy.</p>
+      <p class="display-1 p-5">Making digital things enjoyable.</p>
+      <p class="display-1 p-5">Making digital things that you can enjoy.</p>
+      <p class="display-1 p-5">Making you smile througt digital.</p>
+      <p class="display-1 p-5">Making digital things that you can't even notice.</p>
+      <p class="display-1 p-5">Making digital things enjoyable and functional for your bussiness.</p>
+      <p class="display-1 p-5">I work for you to be happy.</p>
+      <p class="display-1 p-5">I work so you can have a delightful experience.</p>
+      <p class="display-1 p-5">Solving problems so you don't have any.</p>
+      <p class="display-1 p-5">Making digital things easier so you can live your life.</p>
+      <p class="display-1 p-5">Building digital products that you'll enjoy.</p> -->
+      <p class="change-text display-1 p-5">Building digital products that you'll enjoy.</p>
     </header>
-    
-    <div class="gallery">
-      <div class="thumb">
-        <a href="litoral-gas.html">Litoral Gas</a>
-      </div>
-      <div class="thumb">
-        <a href="pos.html">Patient Online Services</a>
-      </div>
-      <div class="thumb">
-        <a href="clinicalbio.html">clinicalBIO</a>
-      </div>
-      <div class="thumb">
-        <a href="btg-pactual.html">BTG Pactual</a>
-      </div>
-      <div class="thumb">
-        <a href="santander.html">Santander</a>
-      </div>
-      <div class="thumb">
-        <a href="delta-airlines.html">Delta Airlines</a>
-      </div>
-    </div>
-    
   </main>
-  
+
+  <div id="gallery">
+    <div class="thumb">
+      <a href="litoral-gas.html">Litoral Gas</a>
+    </div>
+    <div class="thumb">
+      <a href="pos.html">Patient Online Services</a>
+    </div>
+    <div class="thumb">
+      <a href="clinicalbio.html">clinicalBIO</a>
+    </div>
+    <div class="thumb">
+      <a href="btg-pactual.html">BTG Pactual</a>
+    </div>
+    <div class="thumb">
+      <a href="santander.html">Santander</a>
+    </div>
+    <div class="thumb">
+      <a href="delta-airlines.html">Delta Airlines</a>
+    </div>
+  </div>
   
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
