--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
   </main>
 
   <div id="gallery">
+    
+  </div>
+
+  <!-- <div id="gallery">
     <div class="thumb">
       <a href="litoral-gas.html">Litoral Gas</a>
     </div>
@@ -79,7 +83,7 @@
     <div class="thumb">
       <a href="delta-airlines.html">Delta Airlines</a>
     </div>
-  </div>
+  </div> -->
   
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
