--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <!-- CSS -->
   <link rel="stylesheet" href="style.css">
   
-  <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+  <!-- <link rel="stylesheet" href="https://rsms.me/inter/inter.css"> -->
   
-  <title>Ale Laurora - UX Designer</title>
+  <title>Alejandro Laurora - Product Designer</title>
 </head>
 
 <body>
@@ -28,10 +28,10 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link lightson" href="#gallery">Portfolio <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#gallery">Portfolio <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link lightson" href="about.html">Say Hi</a>
+            <a class="nav-link" href="about.html">Say Hi</a>
           </li>
         </ul>
       </div>
@@ -58,10 +58,62 @@
       <p class="display-1 p-5">Building digital products that you'll enjoy.</p> -->
       <p class="change-text display-1 p-5">Building digital products that you'll enjoy.</p>
     </header>
+
+    <div class="poster">
+      <div class="textblock">
+        <h4 class="textblock__subheader">Helmhaus Zürich</h4>
+        <h1 class="textblock__header">Aus der Sammlung des Kunsthauses Zürich</h1>
+        <h4 class="textblock__subheader">Neuere Schweizer Kunst </br> 18.Aug.—13.Sept. 1953</h4>
+        <p class="textblock__caption">taglich geoffnet 10—12 urvd 14—18 Uhr </br> Samstag und Sonntag bis 17 Uhr, Mittwoch auch 20—22 Uhr </br> Montag geschlossen</p>
+      </div>
+    </div>
   </main>
+
+  <div class="poster">
+    <div class="b-one"></div>
+    <div class="b-two"></div>
+    <div class="b-three"></div>
+    <div class="b-four"></div>
+    <div class="b-five"></div>
+    <div class="textblock">
+      <h4 class="textblock__subheader">Helmhaus Zürich</h4>
+      <h1 class="textblock__header">Aus der Sammlung des Kunsthauses Zürich</h1>
+      <h4 class="textblock__subheader">Neuere Schweizer Kunst </br> 18.Aug.—13.Sept. 1953</h4>
+      <p class="textblock__caption">taglich geoffnet 10—12 urvd 14—18 Uhr </br> Samstag und Sonntag bis 17 Uhr, Mittwoch auch 20—22 Uhr </br> Montag geschlossen</p>
+    </div>
+  </div>
+
+  <div class="starring">
+    <div class="names"><span>carl </span>
+      <p>schuricht</p>
+    </div>
+    <div class="names"><span>maria</span>
+      <p>stader</p>
+    </div>
+    <div class="names"><span>katharina </span>
+      <p>marti</p>
+    </div>
+    <div class="names"><span>josef </span>
+      <p>traxel</p>
+    </div>
+    <div class="names"><span>otto </span>
+      <p>von rohr </br> beethoven </br> neunte sinfonie</p>
+    </div>
+  </div>
 
   <div id="gallery">
     
+  </div>
+
+  <div class="footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <h4>Alejandro Laurora</h4>
+          <p>Product Designer</p>
+        </div>
+      </div>
+    </div>
   </div>
 
   <!-- <div id="gallery">
