--- a/soon.html
+++ b/soon.html
@@ -11,7 +11,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="style.css">
     
-    <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+    <!-- <link rel="stylesheet" href="https://rsms.me/inter/inter.css"> -->
     
     <title>Alejandro Laurora - UX Designer</title>
 </head>
