--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  
+  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
   <!-- CSS -->
   <link rel="stylesheet" href="style.css">
   
@@ -19,101 +20,133 @@
 <body>
   <div class="container">
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand mr-auto" href="index.html">
-        <!-- <img class="logo" src="assets/AL-Logo/Logo 5.png" alt="Alejandro Laurora Logo"> -->AL
-      </a>
+      <a class="navbar-brand me-auto" href="index.html"> ▲ </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="#gallery">Portfolio <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#gallery">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">Say Hi</a>
+            <a class="nav-link" href="#">LinkedIn</a>
           </li>
         </ul>
       </div>
     </nav>
   </div>
   
-  
   <main class="container">
-    <header class="lead">
-      <!-- <p class="display-1 p-5">Keepin' things simple and easy to use.</p> -->
-      <!-- <p class="display-1 p-5">Making your life easier.</p>
-      <p class="display-1 p-5">Making your digital life easier.</p>
-      <p class="display-1 p-5">Making your digital life enjoyable.</p>
-      <p class="display-1 p-5">Making stuff you can enjoy.</p>
-      <p class="display-1 p-5">Making digital things enjoyable.</p>
-      <p class="display-1 p-5">Making digital things that you can enjoy.</p>
-      <p class="display-1 p-5">Making you smile througt digital.</p>
-      <p class="display-1 p-5">Making digital things that you can't even notice.</p>
-      <p class="display-1 p-5">Making digital things enjoyable and functional for your bussiness.</p>
-      <p class="display-1 p-5">I work for you to be happy.</p>
-      <p class="display-1 p-5">I work so you can have a delightful experience.</p>
-      <p class="display-1 p-5">Solving problems so you don't have any.</p>
-      <p class="display-1 p-5">Making digital things easier so you can live your life.</p>
-      <p class="display-1 p-5">Building digital products that you'll enjoy.</p> -->
-      <p class="change-text display-1 p-5">Building digital products that you'll enjoy.</p>
+    <header class="lead px-0">
+      <p class="change-text display-1 textblock__header">Building products you'll enjoy.</p>
     </header>
 
     <div class="poster">
+      <!-- <div class="b-one"></div>
+      <div class="b-two"></div>
+      <div class="b-three"></div>
+      <div class="b-four"></div>
+      <div class="b-five"></div> -->
       <div class="textblock">
-        <h4 class="textblock__subheader">Helmhaus Zürich</h4>
-        <h1 class="textblock__header">Aus der Sammlung des Kunsthauses Zürich</h1>
-        <h4 class="textblock__subheader">Neuere Schweizer Kunst </br> 18.Aug.—13.Sept. 1953</h4>
-        <p class="textblock__caption">taglich geoffnet 10—12 urvd 14—18 Uhr </br> Samstag und Sonntag bis 17 Uhr, Mittwoch auch 20—22 Uhr </br> Montag geschlossen</p>
+        <h4 class="textblock__subheader"></h4>
+        <!-- <h1 class="textblock__header">Aus der Sammlung des Kunsthauses Zürich</h1> -->
       </div>
-    </div>
-  </main>
 
-  <div class="poster">
-    <div class="b-one"></div>
-    <div class="b-two"></div>
-    <div class="b-three"></div>
-    <div class="b-four"></div>
-    <div class="b-five"></div>
-    <div class="textblock">
-      <h4 class="textblock__subheader">Helmhaus Zürich</h4>
-      <h1 class="textblock__header">Aus der Sammlung des Kunsthauses Zürich</h1>
-      <h4 class="textblock__subheader">Neuere Schweizer Kunst </br> 18.Aug.—13.Sept. 1953</h4>
-      <p class="textblock__caption">taglich geoffnet 10—12 urvd 14—18 Uhr </br> Samstag und Sonntag bis 17 Uhr, Mittwoch auch 20—22 Uhr </br> Montag geschlossen</p>
+      <!-- <div id="gallery container">
+        <div class="row">
+          <div class="col box">
+            <div class="element"></div>
+            <div class="element"></div>
+            <div class="element"></div>
+            <div class="element"></div>
+            <div class="element"></div>
+            <div class="element"></div>
+            <div class="element"></div>
+            <div class="element"></div>
+            <div class="element"></div>
+          </div>
+        </div>
+      </div> -->
     </div>
-  </div>
 
-  <div class="starring">
-    <div class="names"><span>carl </span>
-      <p>schuricht</p>
-    </div>
-    <div class="names"><span>maria</span>
-      <p>stader</p>
-    </div>
-    <div class="names"><span>katharina </span>
-      <p>marti</p>
-    </div>
-    <div class="names"><span>josef </span>
-      <p>traxel</p>
-    </div>
-    <div class="names"><span>otto </span>
-      <p>von rohr </br> beethoven </br> neunte sinfonie</p>
-    </div>
-  </div>
+    <h4 class="textblock__subheader text-center">Brands I've worked with</h4>
+      <div class="" id="clients">
+        <div class="row no-gutters clients-wrap clearfix wow fadeInUp" style="visibility: visible; animation-name: fadeInUp;">
+          <div class="col-lg-3 col-md-4 col-xs-6">
+              <div class="client-logo">
+                <img src="assets/company-logos/logo-accru.svg" class="img-fluid" alt="">
+              </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-xs-6">
+              <div class="client-logo">
+                <img src="assets/company-logos/logo-btg.svg" class="img-fluid" alt="">
+              </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-xs-6">
+              <div class="client-logo">
+                <img src="assets/company-logos/logo-consumersenery.svg" class="img-fluid" alt="">
+              </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-xs-6">
+              <div class="client-logo">
+                <img src="assets/company-logos/logo-delta.svg" class="img-fluid" alt="">
+              </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-xs-6">
+              <div class="client-logo">
+                <img src="assets/company-logos/logo-lasegunda.svg" class="img-fluid" alt="">
+              </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-xs-6">
+              <div class="client-logo">
+                <img src="assets/company-logos/logo-litoralgas.svg" class="img-fluid" alt="">
+              </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-xs-6">
+              <div class="client-logo">
+                <img src="assets/company-logos/logo-mayo.svg" class="img-fluid" alt="">
+              </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-xs-6">
+              <div class="client-logo">
+                <img src="assets/company-logos/logo-mls.svg" class="img-fluid" alt="">
+              </div>
+          </div>
 
-  <div id="gallery">
-    
-  </div>
-
-  <div class="footer">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4">
-          <h4>Alejandro Laurora</h4>
-          <p>Product Designer</p>
+          <div class="col-lg-4 col-md-4 col-xs-6">
+              <div class="client-logo">
+                <img src="assets/company-logos/logo-santander.svg" class="img-fluid" alt="">
+              </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-xs-6">
+              <div class="client-logo">
+                <img src="assets/company-logos/logo-statefarm.svg" class="img-fluid" alt="">
+              </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-xs-6">
+              <div class="client-logo">
+                <img src="assets/company-logos/logo-vestaplus.svg" class="img-fluid" alt="">
+              </div>
+          </div>
         </div>
       </div>
+
+  </main>
+
+  <!-- <div class="starring">
+    <div class="names">
+      <span>email </span>
+      <p>contact me</p>
     </div>
+    <div class="names">
+      <span>linkedin</span>
+      <p>get more info</p>
+    </div>
+  </div> -->
+
+  <div class="col bio">
+    <p>Born in 1986 in Rosario, Argentina. I've been transforming ideas into products for more than 8 years, with strong passion for digital experiences, seamless interactions and engagement between people and products.</p>
   </div>
 
   <!-- <div id="gallery">
@@ -136,12 +169,23 @@
       <a href="delta-airlines.html">Delta Airlines</a>
     </div>
   </div> -->
+
+  <div class="divider"></div>
+
+  <div class="footer mt-3">
+      <div class="col">
+          <div class="text-center">
+              <p><i class="fa fa-copyright"></i> 2022 _/▲\_ Alejandro Laurora</p>
+          </div>
+      </div>
+  </div>
   
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> -->
 
   <script src="script.js"></script>
 </body>
