Unnecessary styles deleted
Cleaning the house, upgrading to Bootstrap 5

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
-  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
   <!-- CSS -->
@@ -41,34 +40,6 @@
     <header class="lead px-0">
       <p class="change-text display-1 textblock__header">Building products you'll enjoy.</p>
     </header>
-
-    <div class="poster">
-      <!-- <div class="b-one"></div>
-      <div class="b-two"></div>
-      <div class="b-three"></div>
-      <div class="b-four"></div>
-      <div class="b-five"></div> -->
-      <div class="textblock">
-        <h4 class="textblock__subheader"></h4>
-        <!-- <h1 class="textblock__header">Aus der Sammlung des Kunsthauses Zürich</h1> -->
-      </div>
-
-      <!-- <div id="gallery container">
-        <div class="row">
-          <div class="col box">
-            <div class="element"></div>
-            <div class="element"></div>
-            <div class="element"></div>
-            <div class="element"></div>
-            <div class="element"></div>
-            <div class="element"></div>
-            <div class="element"></div>
-            <div class="element"></div>
-            <div class="element"></div>
-          </div>
-        </div>
-      </div> -->
-    </div>
 
     <h4 class="textblock__subheader text-center">Brands I've worked with</h4>
       <div class="" id="clients">
@@ -134,17 +105,6 @@
 
   </main>
 
-  <!-- <div class="starring">
-    <div class="names">
-      <span>email </span>
-      <p>contact me</p>
-    </div>
-    <div class="names">
-      <span>linkedin</span>
-      <p>get more info</p>
-    </div>
-  </div> -->
-
   <div class="col bio">
     <p>Born in 1986 in Rosario, Argentina. I've been transforming ideas into products for more than 8 years, with strong passion for digital experiences, seamless interactions and engagement between people and products.</p>
   </div>
@@ -180,12 +140,9 @@
       </div>
   </div>
   
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> -->
 
   <script src="script.js"></script>
 </body>
