--- a/index.html
+++ b/index.html
@@ -7,42 +7,47 @@
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 
   <!-- CSS -->
   <link rel="stylesheet" href="style.css">
-  
+  <link rel="stylesheet" href="animated.css">
   <!-- <link rel="stylesheet" href="https://rsms.me/inter/inter.css"> -->
   
-  <title>Alejandro Laurora - Product Designer</title>
+  <title>▲ Alejandro Laurora - Product Designer</title>
+
 </head>
 
 <body>
   <div class="container">
-    <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand me-auto" href="index.html"> ▲ </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="#gallery">Portfolio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">LinkedIn</a>
-          </li>
-        </ul>
-      </div>
+    <nav class="navbar sticky-top navbar-expand-lg navbar-light animated slideInDown">
+        <a class="navbar-brand" href="index.html" aria-current="page"><i class="bi bi-triangle"></i> </a>
+
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarToggler">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item active">
+              <a class="nav-link" href="portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://www.linkedin.com/in/alejandro-laurora-a8a8b8b5/" target="_blank">LinkedIn</a>
+            </li>
+          </ul>
+        </div>
     </nav>
   </div>
   
   <main class="container">
-    <header class="lead px-0">
+    <header class="lead px-0 animated slideInUp">
       <p class="change-text display-1 textblock__header">Building products you'll enjoy.</p>
     </header>
 
-    <h4 class="textblock__subheader text-center">Brands I've worked with</h4>
-      <div class="" id="clients">
+      <div class="animated fadeIn slideInUp" id="clients">
+        <h4 class="textblock__subheader text-center">Brands I've worked with</h4>
+        
         <div class="row no-gutters clients-wrap clearfix wow fadeInUp" style="visibility: visible; animation-name: fadeInUp;">
           <div class="col-lg-3 col-md-4 col-xs-6">
               <div class="client-logo">
@@ -130,15 +135,24 @@
     </div>
   </div> -->
 
-  <div class="divider"></div>
+  <!-- <div class="divider"></div> -->
 
-  <div class="footer mt-3">
-      <div class="col">
-          <div class="text-center">
-              <p><i class="fa fa-copyright"></i> 2022 _/▲\_ Alejandro Laurora</p>
+  <div class="container">
+    <div class="footer my-2">
+      <div class="px-6 py-2 px-sm-4 d-flex flex-column flex-sm-row justify-content-center justify-content-sm-between ">
+          <div class="page align-self-center">
+              <p class="m-0"><i class="fa fa-copyright"></i> 2022 <i class="bi bi-triangle-fill"></i> Alejandro Laurora - Product Designer</p>
+          </div>
+          <div class="social align-self-center mt-4 mt-sm-0">
+            <a title="email me" href="mailto:alelaurora@gmail.com"><i class="bi bi-envelope-fill"></i></a>
+            <a title="about me" href="https://www.linkedin.com/in/alejandro-laurora-a8a8b8b5/" target="_blank" class="linkedin"><i class="bi-linkedin"></i> </a>
           </div>
       </div>
+    </div>
   </div>
+  
+
+  <button onclick="topFunction()" id="btn-go-top" title="Go to top"><i class="bi bi-arrow-up-circle-fill"></i></button>
   
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
