Fixes: reuploading and renaming Delta Airlines Image, alt on images, aria-label on empty links and norefeerer on _blanks, deleting junk

--- a/about.html
+++ b/about.html
@@ -38,8 +38,6 @@
           <ul class="custom-menu text-end">
             <li><a href="index.html">Home</a></li>
             <li class="active"><a href="about.html">About Me</a></li>
-            <!-- <li><a href="works.html">Works</a></li> -->
-            <!-- <li><a href="contact.html">Contact</a></li> -->
           </ul>
         </div>
       </div>
@@ -48,8 +46,8 @@
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-      <a class="navbar-brand" href="index.html"><i class="bi bi-triangle"></i></a>
-      <a href="#" class="burger" data-bs-toggle="collapse" data-bs-target="#main-navbar">
+      <a href="index.html" class="navbar-brand" aria-label="Go back Home"><i class="bi bi-triangle"></i></a>
+      <a href="#" class="burger" data-bs-toggle="collapse" data-bs-target="#main-navbar" aria-label="Open or close Menu">
         <span></span>
       </a>
     </div>
@@ -135,7 +133,7 @@
             <p>Born in 1986 in Rosario, Argentina. I've been transforming ideas into digital products for more than 8 years.</p>
             <p>Over the last 6 years I've been working as a Senior UX Designer for big clients.</p>
             <p>Since the last year, after working as main UX Designer of the Digital Transformation team and as Scrum Master in different projects, I was able to put together a team of designers, developing myself as UX Design Team Leader and establish the UX Design throughout the company as a process.</p>
-            <p><a href="https://www.linkedin.com/in/alelaurora/" class="readmore" target="_blank"><span class="bi bi-linkedin"></span> My Profile</a></p>
+            <p><a href="https://www.linkedin.com/in/alelaurora/" class="readmore" target="_blank" rel="noopener noreferrer"><span class="bi bi-linkedin"></span> My Profile</a></p>
           </div>
 
         </div>
@@ -155,15 +153,15 @@
           <p class="mb-1"><i class="fa fa-copyright"></i> 2022 <i class="bi bi-triangle-fill"></i> Alejandro Laurora - Product Designer</p>
         </div>
         <div class="col-sm-6 social text-md-end">
-          <a href="mailto:alelaurora@gmail.com"><span class="bi bi-envelope"></span></a>
-          <a href="https://www.instagram.com/alelaurora/"><span class="bi bi-instagram"></span></a>
-          <a href="https://www.linkedin.com/in/alelaurora" target="_blank"><span class="bi bi-linkedin"></span></a>
+          <a href="mailto:alelaurora@gmail.com" aria-label="Open an email with my address in the 'to:' field"><span class="bi bi-envelope"></span></a>
+          <a href="https://www.instagram.com/alelaurora/" target="_blank" rel="noopener noreferrer" aria-label="Open my Instagram page on a new tab"><span class="bi bi-instagram"></span></a>
+          <a href="https://www.linkedin.com/in/alelaurora" target="_blank" rel="noopener noreferrer" aria-label="Open my LinkedIn page on a new tab"><span class="bi bi-linkedin"></span></a>
         </div>
       </div>
     </div>
   </footer>
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center" aria-label="Go back to top"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/aos/aos.js"></script>
