--- a/bioma.html
+++ b/bioma.html
@@ -48,9 +48,9 @@
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-      <a class="navbar-brand" href="index.html"><i class="bi bi-triangle"></i></a>
-      <a href="#" class="burger" data-bs-toggle="collapse" data-bs-target="#main-navbar">
-        <span></span>
+      <a href="index.html" class="navbar-brand" aria-label="Go back Home"><i class="bi bi-triangle"></i></a>
+      <a href="#" class="burger" data-bs-toggle="collapse" data-bs-target="#main-navbar" aria-label="Open or close Menu">
+        <span></span>.
       </a>
     </div>
   </nav>
@@ -237,15 +237,15 @@
           <p class="mb-1"><i class="fa fa-copyright"></i> 2022 <i class="bi bi-triangle-fill"></i> Alejandro Laurora - Product Designer</p>
         </div>
         <div class="col-sm-6 social text-md-end">
-          <a href="mailto:alelaurora@gmail.com"><span class="bi bi-envelope"></span></a>
-          <a href="https://www.instagram.com/alelaurora/"><span class="bi bi-instagram"></span></a>
-          <a href="https://www.linkedin.com/in/alelaurora" target="_blank"><span class="bi bi-linkedin"></span></a>
+          <a href="mailto:alelaurora@gmail.com" aria-label="Open an email with my address in the 'to:' field"><span class="bi bi-envelope"></span></a>
+          <a href="https://www.instagram.com/alelaurora/" target="_blank" rel="noopener noreferrer" aria-label="Open my Instagram page on a new tab"><span class="bi bi-instagram"></span></a>
+          <a href="https://www.linkedin.com/in/alelaurora" target="_blank" rel="noopener noreferrer" aria-label="Open my LinkedIn page on a new tab"><span class="bi bi-linkedin"></span></a>
         </div>
       </div>
     </div>
   </footer>
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center" aria-label="Go back to top"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/aos/aos.js"></script>
