--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 
   <!-- Google Fonts -->
   <!-- <link href="https://fonts.googleapis.com/css?family=https://fonts.googleapis.com/css?family=Inconsolata:400,500,600,700|Raleway:400,400i,500,500i,600,600i,700,700i" rel="stylesheet"> -->
-  <!-- <link href="https://fonts.google.com/share?selection.family=Playfair%20Display:ital,wght@0,400;0,600;0,700;1,600%7CWork%20Sans:wght@300;400;700" rel="stylesheet"> -->
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
@@ -38,8 +37,6 @@
           <ul class="custom-menu text-end">
             <li class="active"><a href="index.html">Home</a></li>
             <li><a href="about.html">About Me</a></li>
-            <!-- <li><a href="works.html">Works</a></li> -->
-            <!-- <li><a href="contact.html">Contact</a></li> -->
           </ul>
         </div>
       </div>
@@ -48,8 +45,8 @@
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-      <a class="navbar-brand" href="index.html">▲ Alejandro Laurora</a>
-      <a href="#" class="burger" data-bs-toggle="collapse" data-bs-target="#main-navbar">
+      <a href="index.html" class="navbar-brand" aria-label="Go back Home"><i class="bi bi-triangle"></i></a>
+      <a href="#" class="burger" data-bs-toggle="collapse" data-bs-target="#main-navbar" aria-label="Open or close Menu">
         <span></span>
       </a>
     </div>
@@ -82,7 +79,7 @@
                 <h3>Keep Climbing</h3>
                 <span>Delta</span>
               </div>
-              <img class="img-fluid" src="assets/img/Img-1-alt.png">
+              <img class="img-fluid" title="Keep Climbing" src="assets/img/Img-1-alt.png">
             </a>
           </div>
 
@@ -112,27 +109,9 @@
                 <h3>B I O M A</h3>
                 <span>La Segunda</span>
               </div>
-              <img class="img-fluid" src="assets/img/Img-4.png">
+              <img class="img-fluid" title="Bioma - Design System" src="assets/img/Img-4.png">
             </a>
           </div>
-          <!-- <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
-              <div class="work-info">
-                <h3>Kitchen Sink</h3>
-                <span>Photography</span>
-              </div>
-              <img class="img-fluid" src="assets/img/img_5.jpg">
-            </a>
-          </div>
-          <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
-              <div class="work-info">
-                <h3>Amazon</h3>
-                <span>brandingn</span>
-              </div>
-              <img class="img-fluid" src="assets/img/img_6.jpg">
-            </a>
-          </div> -->
         </div>
       </div>
     </section><!-- End  Works Section -->
@@ -143,7 +122,6 @@
         <div class="row justify-content-center text-center mb-4">
           <div class="col-5">
             <h3 class="h3 heading">Brands I've worked with</h3>
-            <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p> -->
           </div>
         </div>
         
@@ -252,15 +230,16 @@
           <p class="mb-1"><i class="fa fa-copyright"></i> 2022 <i class="bi bi-triangle-fill"></i> Alejandro Laurora - Product Designer</p>
         </div>
         <div class="col-sm-6 social text-md-end">
-          <a href="mailto:alelaurora@gmail.com"><span class="bi bi-envelope"></span></a>
-          <a href="https://www.instagram.com/alelaurora/"><span class="bi bi-instagram"></span></a>
-          <a href="https://www.linkedin.com/in/alelaurora" target="_blank"><span class="bi bi-linkedin"></span></a>
+          <a href="mailto:alelaurora@gmail.com" aria-label="Open an email with my address in the 'to:' field"><span class="bi bi-envelope"></span></a>
+          <a href="https://www.instagram.com/alelaurora/" target="_blank" rel="noopener noreferrer" aria-label="Open my Instagram page on a new tab"><span class="bi bi-instagram"></span></a>
+          <a href="https://www.linkedin.com/in/alelaurora" target="_blank" rel="noopener noreferrer" aria-label="Open my LinkedIn page on a new tab"><span class="bi bi-linkedin"></span></a>
         </div>
       </div>
     </div>
   </footer>
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center" aria-label="Go back to top"><i class="bi bi-arrow-up-short"></i></a>
+
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/aos/aos.js"></script>
