--- a/keep-climbing.html
+++ b/keep-climbing.html
@@ -15,7 +15,6 @@
 
   <!-- Google Fonts -->
   <!-- <link href="https://fonts.googleapis.com/css?family=https://fonts.googleapis.com/css?family=Inconsolata:400,500,600,700|Raleway:400,400i,500,500i,600,600i,700,700i" rel="stylesheet"> -->
-  <!-- <link href="https://fonts.google.com/share?selection.family=Playfair%20Display:ital,wght@0,400;0,600;0,700;1,600%7CWork%20Sans:wght@300;400;700" rel="stylesheet"> -->
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
@@ -38,8 +37,6 @@
           <ul class="custom-menu text-end">
             <li class="active"><a href="index.html">Home</a></li>
             <li><a href="about.html">About Me</a></li>
-            <!-- <li><a href="works.html">Works</a></li> -->
-            <!-- <li><a href="contact.html">Contact</a></li> -->
           </ul>
         </div>
       </div>
@@ -48,8 +45,8 @@
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-      <a class="navbar-brand" href="index.html"><i class="bi bi-triangle"></i></a>
-      <a href="#" class="burger" data-bs-toggle="collapse" data-bs-target="#main-navbar">
+      <a href="index.html" class="navbar-brand" aria-label="Go back Home"><i class="bi bi-triangle"></i></a>
+      <a href="#" class="burger" data-bs-toggle="collapse" data-bs-target="#main-navbar" aria-label="Open or close Menu">
         <span></span>
       </a>
     </div>
@@ -73,7 +70,7 @@
 
             <!-- MAIN -->
             <div class="col-md-8" data-aos="fade-up">
-              <img src="assets/img/delta/KeepClimbing_Page_v7_Q2+Q3.jpg" class="img-fluid card-shadow" alt="Delta Airlines - Shows Keep Climbing single page">
+              <img src="assets/img/delta/KeepClimbing.jpg" class="img-fluid card-shadow" alt="Delta Airlines - Shows Keep Climbing single page">
             </div>
 
             <!-- SIDE -->
@@ -93,7 +90,7 @@
                   <li>Front-end</li>
                 </ul>
 
-                <p><a href="https://www.delta.com/content/dam/delta-www/keep-climbing/index.html" class="readmore">Visit Website</a></p>
+                <p><a href="https://www.delta.com/content/dam/delta-www/keep-climbing/index.html" rel="noopener noreferrer" class="readmore" target="_blank" >Visit Website</a></p>
               </div>
             </div>
           </div>
@@ -111,15 +108,15 @@
           <p class="mb-1"><i class="fa fa-copyright"></i> 2022 <i class="bi bi-triangle-fill"></i> Alejandro Laurora - Product Designer</p>
         </div>
         <div class="col-sm-6 social text-md-end">
-          <a href="mailto:alelaurora@gmail.com"><span class="bi bi-envelope"></span></a>
-          <a href="https://www.instagram.com/alelaurora/"><span class="bi bi-instagram"></span></a>
-          <a href="https://www.linkedin.com/in/alelaurora" target="_blank"><span class="bi bi-linkedin"></span></a>
+          <a href="mailto:alelaurora@gmail.com" aria-label="Open an email with my address in the 'to:' field"><span class="bi bi-envelope"></span></a>
+          <a href="https://www.instagram.com/alelaurora/" target="_blank" rel="noopener noreferrer" aria-label="Open my Instagram page on a new tab"><span class="bi bi-instagram"></span></a>
+          <a href="https://www.linkedin.com/in/alelaurora" target="_blank" rel="noopener noreferrer" aria-label="Open my LinkedIn page on a new tab"><span class="bi bi-linkedin"></span></a>
         </div>
       </div>
     </div>
   </footer>
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center" aria-label="Go back to top"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/aos/aos.js"></script>
