--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-      <a href="index.html" class="navbar-brand" aria-label="Go back Home"><i class="bi bi-triangle"></i></a>
+      <a href="index.html" class="navbar-brand" aria-label="Go back Home"><i class="bi bi-triangle"></i> Alejandro Laurora</a>
       <a href="#" class="burger" data-bs-toggle="collapse" data-bs-target="#main-navbar" aria-label="Open or close Menu">
         <span></span>
       </a>
